# MLIR-FUZZ-LTS

./: README.md
mlir/tools/desil/: CMakeLists.txt
mlir/tools/desil/AutoInstrumentation/: CMakeLists.txt  main.cpp
mlir/tools/desil/CheckSum/: CMakeLists.txt  main.cpp
mlir/tools/desil/CheckSum/checksum/: checksum.cpp
mlir/tools/desil/CheckSum/include/: CMakeLists.txt
mlir/tools/desil/CheckSum/include/checksum/: checksum.h
mlir/tools/desil/CollectCoverage/: CMakeLists.txt  main.cpp
mlir/tools/desil/CollectCoverage/include/: MutationUtil.h
mlir/tools/desil/CreateNode/: AffineNodeGenerator.cpp  ArithNodeGenerator.cpp  BufferizationNodeGenerator.cpp  CMakeLists.txt  IndexNodeGenerator.cpp  LinalgNodeGenerator.cpp  MathNodeGenerator.cpp  MemrefNodeGenerator.cpp  SCFNodeGenerator.cpp  SpirvNodeGenerator.cpp  TensorNodeGenerator.cpp  TosaNodeGenerator.cpp  TypeBase.cpp  VectorNodeGenerator.cpp  main.cpp
mlir/tools/desil/CreateNode/include/: MutationUtil.h  NodeGenerator.h
mlir/tools/desil/DeleteNode/: CMakeLists.txt  main.cpp
mlir/tools/desil/DeleteNode/include/: MutationUtil.h
mlir/tools/desil/FixUBnew/: CMakeLists.txt  FixUBMain.cpp
mlir/tools/desil/FixUBnew/fixub/: ConstantPool.cpp  FixAffine.cpp  FixArith.cpp  FixIndex.cpp  FixLinalg.cpp  FixMemRef.cpp  FixScf.cpp  FixTensor.cpp  FixTosa.cpp  FixUBUtils.cpp  FixVector.cpp
mlir/tools/desil/FixUBnew/include/: CMakeLists.txt
mlir/tools/desil/FixUBnew/include/fixub/: ConstantPool.h  DelOp.h  FixAffine.h  FixArith.h  FixIndex.h  FixLinalg.h  FixMemRef.h  FixScf.h  FixTensor.h  FixTosa.h  FixUBUtils.h  FixVector.h  common.h
mlir/tools/desil/FixUBnew/test/fixmemref/: fix.memref.assume_alignment1.mlir  fix.memref.assume_alignment2.mlir  fix.memref.assume_alignment3.mlir  fix.memref.copy1.mlir  fix.memref.copy2.mlir  fix.memref.copy3.mlir  fix.memref.realloc1.mlir  fix.memref.realloc2.mlir  fix.memref.realloc3.mlir
mlir/tools/desil/FixUBnew/test/fixvector/: fix.vector.compressstore1.mlir  fix.vector.compressstore2.mlir  fix.vector.compressstore3.mlir  fix.vector.expandload1.mlir  fix.vector.expandload2.mlir  fix.vector.expandload3.mlir  fix.vector.scatter1.mlir  fix.vector.scatter2.mlir  fix.vector.scatter3.mlir
mlir/tools/desil/GetExeTargetOp/: CMakeLists.txt  main.cpp
mlir/tools/desil/GetExeTargetOp/include/: Traverse.h
mlir/tools/desil/GetTargetOp/: CMakeLists.txt  main.cpp
mlir/tools/desil/MLIRSmith/: CMakeLists.txt  toyc.cpp
mlir/tools/desil/MLIRSmith/include/smith/: RegionGeneration.h  TypeGeneration.h  TypeValue.h  TypedValuePool.h  Util.h  ValueGeneration.h  config.h
mlir/tools/desil/MLIRSmith/include/toy/: CMakeLists.txt  Ops.td
mlir/tools/desil/MLIRSmith/pytest/: afteropt1.mlir  afteropt2.mlir  changei64.mlir  circtest.py  generated.mlir  template.mlir
mlir/tools/desil/MLIRSmith/smith/: MLIRSmith.cpp  OpPrinterPass.cpp  RegionGeneration.cpp  TmplInstantiation.cpp  TypedValuePool.cpp  Util.cpp  ValueGeneration.cpp
mlir/tools/desil/MLIRSmith/smith/generators/: AffineGeneratorProvider.cpp  ArithGeneratorProvider.cpp  ArithGeneratorProvider.cpp.bak  BufferizationGeneratorProvider.cpp  FuncGeneratorProvider.cpp  IndexGeneratorProvider.cpp  LinalgGeneratorProvider.cpp  MathGeneratorProvider.cpp  MemrefGeneratorProvider.cpp  OpGeneratorProvider.cpp  SCFGeneratorProvider.cpp  SPIRVGeneratorProvider.cpp  TensorGeneratorProvider.cpp  TosaGeneratorProvider.cpp  (+2 more)
mlir/tools/desil/ReduceCrash/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReduceExecuteCrash/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReduceExecuteCrash/include/: MutationUtil.h
mlir/tools/desil/ReduceLast/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReduceMLIR/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReducePrint/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReducePrint/include/: MutationUtil.h
mlir/tools/desil/ReduceWrongCode/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReplaceControlEdge/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReplaceControlEdge/include/: MutationUtil.h
mlir/tools/desil/ReplaceDataEdge/: CMakeLists.txt  main.cpp
mlir/tools/desil/ReplaceDataEdge/include/: MutationUtil.h
mlir/tools/mlirod/CollectInformation/: CMakeLists.txt  main.cpp
mlir/tools/mlirod/CollectInformation/include/: Traverse.h
mlir/tools/mlirod/DeleteNode/: CMakeLists.txt  main.cpp
mlir/tools/mlirod/DeleteNode/include/: MutationUtil.h  Traverse.h
(+101 files in other folders)
